[package]
name = "send-multipart"
description = "A small library for multipart/form-data requests"
keywords = ["form-data", "multipart", "http"]
version = "0.1.0"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
bytes = "1.5.0"
futures = { version = "0.3.30", optional = true }
http0 = { package = "http", version = "0.2.11" }
http1 = { package = "http", version = "1.0.0", optional = true }
mime = "0.3.17"
thiserror = "1.0.57"

[dev-dependencies]
claym = "0.5.1"
futures = { version = "0.3.30", default-features = false }
multer = "3.0.0"
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = []
http1 = ["dep:http1"]
stream = ["dep:futures"]
